tests/errors/refs/007.err
[1m[0;31merror: [0mCannot use 'r' from an enclosing function - pass it as a parameter
  [2mtests/errors/refs/007.ura:7:16[0m
  [1m[34m|[0m
[1m[34m7 |[0m         return r
  [1m[34m|[0m                [1;31m^[0m
